--- a/match-navigator/src/main/AndroidManifest.xml
+++ b/match-navigator/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.gregmcgowan.fivesorganiser.match" />
+    package="com.gregmcgowan.fivesorganiser.match.navigator" />
