--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -12,15 +12,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
-    - name : google services
-      env:  
-        GOOGLE_SERVICES_KEY: ${{ secrets.GOOGLE_SERVICES_KEY }}
-      run: |  
-        ./signing/setup.sh "$env:GOOGLE_SERVICES_KEY"
-    - name: Build with Gradle
-      run: ./gradlew build
+      - uses: actions/checkout@v2
+
+      - name : google services
+        run:  ./signing/setup.sh "$env:GOOGLE_SERVICES_KEY"
+        env:
+          GOOGLE_SERVICES_KEY: ${{ secrets.GOOGLE_SERVICES_KEY }}
+
+
+      - name: set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+
+      - name: Build with Gradle
+        run: ./gradlew build
