--- a/core/build.gradle
+++ b/core/build.gradle
@@ -7,6 +7,7 @@ dependencies {
     api "org.jetbrains.kotlin:kotlin-stdlib:${versions.kotlin}"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-core:${versions.coroutines}"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:${versions.coroutines}"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-test:${versions.coroutines}"
 
     api "androidx.appcompat:appcompat:${versions.androidx.appcompat}"
     api "androidx.constraintlayout:constraintlayout:${versions.androidx.constraint_layout}"
