--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ buildscript {
             ],
             'kotlin'                     : '1.4.20',
             'kotlin_gradle_plugin'       : '1.4.20',
-            'coroutines'                 : '1.3.7',
+            'coroutines'                 : '1.4.2',
             'material'                   : '1.0.0',
             'compose'                    : '1.0.0-alpha08',
             'firebase_core'              : '16.0.9',
@@ -105,6 +105,7 @@ subprojects {
             freeCompilerArgs += '-Xopt-in=kotlin.RequiresOptIn'
             // Enable experimental coroutines APIs, including collectAsState()
             freeCompilerArgs += '-Xopt-in=kotlinx.coroutines.ExperimentalCoroutinesApi'
+            freeCompilerArgs += "-Xopt-in=kotlinx.coroutines.FlowPreview"
         }
     }
 
