--- a/playerlist/build.gradle
+++ b/playerlist/build.gradle
@@ -4,8 +4,18 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'dagger.hilt.android.plugin'
 
 android {
-    kotlinOptions {
-        jvmTarget = "1.8"
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    buildFeatures {
+        compose true
+    }
+
+    composeOptions {
+        kotlinCompilerVersion "${versions.kotlin}"
+        kotlinCompilerExtensionVersion "${versions.compose}"
     }
 }
 
