--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,6 +1,23 @@
 apply plugin: 'com.android.library'
 apply from: "../base-android-library.gradle"
 
+android {
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    buildFeatures {
+        compose true
+    }
+
+    composeOptions {
+        kotlinCompilerVersion "${versions.kotlin}"
+        kotlinCompilerExtensionVersion "${versions.compose}"
+    }
+}
+
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
