--- a/build.gradle
+++ b/build.gradle
@@ -16,8 +16,8 @@ buildscript {
                     'arch_core_testing'       : "1.0.0",
                     'hilt_compiler'           : "1.0.0-alpha02",
                     'hilt_lifecycle_viewmodel': "1.0.0-alpha02",
-                    'activity_ktx'            : "1.1.0",
-                    'fragment_ktx'            : "1.2.5",
+                    'activity_ktx'            : '1.2.0',
+                    'fragment_ktx'            : '1.3.0',
             ],
             'kotlin'                     : '1.4.20',
             'kotlin_gradle_plugin'       : '1.4.20',
