--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -17,33 +17,13 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Gradle cache
-        uses: gradle/actions/setup-gradle@v3
-
-      - name: AVD cache
-        uses: actions/cache@v4
-        id: avd-cache
-        with:
-          path: |
-            ~/.android/avd/*
-            ~/.android/adb*
-          key: avd-29
-
+        uses: gradle/actions/setup-gradle@v4
+        
       - name: Enable KVM
         run: |
           echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
           sudo udevadm control --reload-rules
           sudo udevadm trigger --name-match=kvm
-
-      - name: create AVD and generate snapshot for caching
-        if: steps.avd-cache.outputs.cache-hit != 'true'
-        uses: reactivecircus/android-emulator-runner@v2
-        with:
-          api-level: 29
-          target: google_apis
-          force-avd-creation: false
-          emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
-          disable-animations: false
-          script: echo "Generated AVD snapshot for caching."
 
       - name: google services
         run: ./signing/setup.sh "$env:GOOGLE_SERVICES_KEY"
@@ -58,7 +38,7 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew build
 
-      - name: run tests
+      - name: Run UI Tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 29
