--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,7 @@ buildscript {
 
 plugins {
     id "io.gitlab.arturbosch.detekt" version "1.19.0"
+    id "org.jlleitschuh.gradle.ktlint" version "12.3.0"
     id "com.google.devtools.ksp" version "2.1.10-1.0.31"
     id "com.google.dagger.hilt.android" version "2.56.2" apply false
 }
@@ -102,4 +103,5 @@ subprojects {
         config = files("${rootProject.getProjectDir()}/quality/detekt-config.yml")
     }
 
+    apply plugin: "org.jlleitschuh.gradle.ktlint"
 }
