--- a/gradle.properties
+++ b/gradle.properties
@@ -18,12 +18,9 @@ org.gradle.daemon=true
 org.gradle.logging.level=info
 org.gradle.jvmargs=-Xmx4g -XX:+HeapDumpOnOutOfMemoryError -XX:+UseParallelGC -XX:MaxMetaspaceSize=512m -Dkotlin.daemon.jvm.options=-XX:MaxMetaspaceSize=1g -Dlint.nullness.ignore-deprecated=true
 
-
-# Set this untill we update the full codebase
-kotlin.code.style=obsolete
+kotlin.code.style=official
 
 # AndroidX
 android.useAndroidX=true
-#android.enableJetifier=true
 
 
